--- a/kubernetes/nginx_deployment.yml
+++ b/kubernetes/nginx_deployment.yml
@@ -20,3 +20,21 @@ spec:
         image: nginx:latest
         ports:
         - containerPort: 80
+        lifecycle:
+          postStart:
+            exec:
+              command: ["/bin/sh", "-c", "echo '<html><body>Hello from the postStart handler<body></html>' > /usr/share/nginx/html/index.html"]
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx
+  namespace: imartinez
+spec:
+  selector:
+    app: nginx
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
+
