--- a/kubernetes/config-map.yaml
+++ b/kubernetes/config-map.yaml
@@ -5,4 +5,4 @@ metadata:
   namespace: imartinez
 data:
   hello_world:
-    <html><body>Hello from the postStart handler<body></html>
+    "<html><body>Hello from the postStart handler<body></html>"
